--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
             </div>
         </div>
     </nav>
+
+    <p
+        Created by Nitya>
+    </p>
     <!-- end top nav -->
 
     <!-- main -->
