--- a/index.html
+++ b/index.html
@@ -35,9 +35,12 @@
         </div>
     </nav>
 
-    <p
+    <div>
+        <p
         Created by Nitya>
     </p>
+    </div>
+    
     <!-- end top nav -->
 
     <!-- main -->
